--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20sp"/>
+        android:layout_marginTop="25dp"/>
 
     <ImageView
         android:id="@+id/santa_rita"
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginTop="70sp"
+        android:layout_marginTop="50sp"
         android:contentDescription="@string/todo" />
 
     <com.google.android.material.button.MaterialButton
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_santa_rita"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50sp"
         android:contentDescription="@string/todo" />
 
     <com.google.android.material.button.MaterialButton
