--- a/app/src/main/res/layout/activity_pedido_a_santa_rita.xml
+++ b/app/src/main/res/layout/activity_pedido_a_santa_rita.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pedido_a_Santa_Rita">
+    tools:context="oracoes.e.promessasnew.Pedido_a_Santa_Rita">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_start"
