App performance improvements Code improvements Bug fixes

--- a/app/src/main/res/layout/activity_oracao_do_pai_nosso.xml
+++ b/app/src/main/res/layout/activity_oracao_do_pai_nosso.xml
@@ -53,8 +53,8 @@
 
     <TextView
         android:id="@+id/text_oracao"
-        android:layout_width="350sp"
-        android:layout_height="130sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:text="@string/Oracao_do_Pai_Nosso_text"
@@ -62,7 +62,11 @@
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toTopOf="@id/guide_top"
-        app:layout_constraintBottom_toBottomOf="@id/guide_under"/>
+        app:layout_constraintBottom_toBottomOf="@id/guide_under"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/compartilhe"
